--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "build": "encore production --progress"
     },
     "dependencies": {
+        "bootstrap-icons": "^1.0.0-alpha3",
         "mkdirp": "^1.0.4"
     }
 }
