--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,7 @@
 npm-debug.log
 yarn-error.log
 ###< symfony/webpack-encore-bundle ###
+
+###> fontawesome icons ###
+/public/fontawesome/
+###> fontawesome icons ###
