--- a/config/packages/twig.yaml
+++ b/config/packages/twig.yaml
@@ -2,3 +2,5 @@ twig:
     default_path: '%kernel.project_dir%/templates'
     globals:
         locales: '%app_locales%'
+    # for bootstrap theme
+    form_themes: ['bootstrap_4_layout.html.twig']
