--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,7 @@
         "php": "^7.2.5",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "friendsofsymfony/ckeditor-bundle": "^2.2",
         "laminas/laminas-code": "^3.4",
         "sensio/framework-extra-bundle": "^5.1",
         "symfony/asset": "5.0.*",
