--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "build": "encore production --progress"
     },
     "dependencies": {
+        "ckeditor": "^4.12.1",
         "mkdirp": "^1.0.4"
     }
 }
