--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -39,3 +39,5 @@ security:
         - { path : ^/login$, roles: IS_AUTHENTICATED_ANONYMOUSLY }
         # - { path: ^/admin, roles: ROLE_ADMIN }
         # - { path: ^/profile, roles: ROLE_USER }
+    role_hierarchy:
+        ROLE_ADMIN: ROLE_USER
