work on upload new avatar. bugs identifies : 1. when default avatar (delete avatar), error 500 2. when open window to choose file, load an image, reopen window to choose file and cancel, bug blocks 3. do translation of error message of Json response

--- a/config/services.yaml
+++ b/config/services.yaml
@@ -16,7 +16,7 @@ services:
         bind:
             $locales: '%app_locales%'
             $defaultLocale: '%locale%'
-            $avatarDir: '%kernel.project_dir%/public/uploads/avatars'
+            $avatarDir: '%kernel.project_dir%/public/uploads/avatars/'
 
     # makes classes in src/ available to be used as services
     # this creates a service per class whose id is the fully-qualified class name
