--- a/config/packages/framework.yaml
+++ b/config/packages/framework.yaml
@@ -7,6 +7,7 @@ framework:
     # Remove or comment this section to explicitly disable session support.
     session:
         handler_id: null
+        cookie_lifetime: 43200  #time in seconds
         cookie_secure: auto
         cookie_samesite: lax
 
