--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,7 @@
         "php": "^7.2.5",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "amphp/http-client": "^4.3",
         "friendsofsymfony/ckeditor-bundle": "^2.2",
         "imagine/imagine": "^1.2",
         "laminas/laminas-code": "^3.4",
