--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "build": "encore production --progress"
     },
     "dependencies": {
-        "mkdirp": "^1.0.4"
+        "mkdirp": "^1.0.4",
+        "moment": "^2.27.0"
     }
 }
