--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "imagine/imagine": "^1.2",
         "laminas/laminas-code": "^3.4",
         "sensio/framework-extra-bundle": "^5.1",
+        "symfony/apache-pack": "^1.0",
         "symfony/asset": "5.1.*",
         "symfony/console": "5.1.*",
         "symfony/dotenv": "5.1.*",
