--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     },
     "dependencies": {
         "mkdirp": "^1.0.4",
-        "moment": "^2.27.0"
+        "moment": "^2.27.0",
+        "ssri": "^8.0.1",
+        "y18n": "^5.0.8"
     }
 }
