--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
         "build": "encore production --progress"
     },
     "dependencies": {
+        "elliptic": "^6.5.4",
+        "is-svg": "^4.3.1",
         "mkdirp": "^1.0.4",
         "moment": "^2.27.0",
         "ssri": "^8.0.1",
