--- a/package.json
+++ b/package.json
@@ -23,9 +23,12 @@
     },
     "dependencies": {
         "elliptic": "^6.5.4",
+        "ini": "^2.0.0",
         "is-svg": "^4.3.1",
         "mkdirp": "^1.0.4",
         "moment": "^2.27.0",
+        "node-notifier": "^9.0.1",
+        "object-path": "^0.11.5",
         "ssri": "^8.0.1",
         "y18n": "^5.0.8"
     }
