--- a/config/services.yaml
+++ b/config/services.yaml
@@ -7,7 +7,6 @@ parameters:
     locale: en
     # This parameter defines the codes of the locales (languages) enabled in the application
     app_locales: en|fr
-
 services:
     # default configuration for services in *this* file
     _defaults:
@@ -17,17 +16,20 @@ services:
             $locales: '%app_locales%'
             $defaultLocale: '%locale%'
             $avatarDir: '%kernel.project_dir%/public/uploads/avatars/'
-
     # makes classes in src/ available to be used as services
     # this creates a service per class whose id is the fully-qualified class name
     App\:
-        resource: '../src/*'
-        exclude: '../src/{DependencyInjection,Entity,Migrations,Tests,Kernel.php}'
+        resource: '../src/'
+        exclude:
+            - '../src/DependencyInjection/'
+            - '../src/Entity/'
+            - '../src/Kernel.php'
+            - '../src/Tests/'
 
     # controllers are imported separately to make sure services can be injected
     # as action arguments even if you don't extend any base controller class
     App\Controller\:
-        resource: '../src/Controller'
+        resource: '../src/Controller/'
         tags: ['controller.service_arguments']
 
     # add more service definitions when explicit configuration is needed
